prueba sln files

--- a/GymWare-Backend/GymWare.API/GymWare.API.csproj
+++ b/GymWare-Backend/GymWare.API/GymWare.API.csproj
@@ -277,6 +277,12 @@
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\GymWare.Logic\GymWare.Logic.csproj">
+      <Project>{96dff185-bab5-472c-910a-f5cd7fc35cf6}</Project>
+      <Name>GymWare.Logic</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
