CRUD done. Not functioning.

--- a/GymWare-Backend/GymWare.API/Web.config
+++ b/GymWare-Backend/GymWare.API/Web.config
@@ -1,9 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<!--
-  Para obtener más información sobre cómo configurar la aplicación ASP.NET, visite
-  https://go.microsoft.com/fwlink/?LinkId=301879
-  -->
 <configuration>
+  <configSections>
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
+  <connectionStrings>
+    <add name="GymWare" connectionString="Data Source=LAPTOP-7NUUU4J1; Initial Catalog=GymWare; Integrated Security=True; MultipleActiveResultSets=True;"
+      providerName="System.Data.SqlClient" />
+    <!--<add name="GymWareContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=GymWareContext-20180805232957; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|GymWareContext-20180805232957.mdf"
+      providerName="System.Data.SqlClient" />-->
+  </connectionStrings>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
     <add key="webpages:Enabled" value="false"/>
