--- a/GymWare-Backend/GymWare.API/GymWare.API.csproj
+++ b/GymWare-Backend/GymWare.API/GymWare.API.csproj
@@ -183,6 +183,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\EjercicioController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
@@ -278,6 +279,10 @@
     <Content Include="Scripts\jquery-3.3.1.min.map" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\GymWare.Entities\GymWare.Entities.csproj">
+      <Project>{f6d29e82-d4d7-4bf5-9ed2-6d78d375f67a}</Project>
+      <Name>GymWare.Entities</Name>
+    </ProjectReference>
     <ProjectReference Include="..\GymWare.Logic\GymWare.Logic.csproj">
       <Project>{96dff185-bab5-472c-910a-f5cd7fc35cf6}</Project>
       <Name>GymWare.Logic</Name>
