--- a/GymWare-Backend/GymWare.API/Web.config
+++ b/GymWare-Backend/GymWare.API/Web.config
@@ -4,7 +4,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="GymWare" connectionString="Data Source=LAPTOP-7NUUU4J1; Initial Catalog=GymWare; Integrated Security=True; MultipleActiveResultSets=True;"
+    <add name="GymWareBauti" connectionString="Data Source=LAPTOP-7NUUU4J1; Initial Catalog=GymWare; Integrated Security=True; MultipleActiveResultSets=True;"
       providerName="System.Data.SqlClient" />
     <!--<add name="GymWareContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=GymWareContext-20180805232957; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|GymWareContext-20180805232957.mdf"
       providerName="System.Data.SqlClient" />-->
