--- a/GymWare-Backend/GymWare.Entities/GymWare.Entities.csproj
+++ b/GymWare-Backend/GymWare.Entities/GymWare.Entities.csproj
@@ -40,10 +40,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Asistencia.cs" />
+    <Compile Include="Cliente.cs" />
+    <Compile Include="Comida.cs" />
+    <Compile Include="Cuota.cs" />
+    <Compile Include="Dieta.cs" />
+    <Compile Include="DietaCliente.cs" />
+    <Compile Include="DietaComida.cs" />
     <Compile Include="Ejercicio.cs" />
+    <Compile Include="Empleado.cs" />
+    <Compile Include="EmpleadoClienteRutina.cs" />
+    <Compile Include="Membresia.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rutina.cs" />
     <Compile Include="RutinaEjercicio.cs" />
+    <Compile Include="Usuario.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
