--- a/GymWare-Backend/GymWare.Entities/GymWare.Entities.csproj
+++ b/GymWare-Backend/GymWare.Entities/GymWare.Entities.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Dieta.cs" />
     <Compile Include="DietaCliente.cs" />
     <Compile Include="DietaComida.cs" />
+    <Compile Include="DTO\RutinaEjerciciosDTO.cs" />
     <Compile Include="Ejercicio.cs" />
     <Compile Include="Empleado.cs" />
     <Compile Include="EmpleadoClienteRutina.cs" />
