--- a/GymWare-Backend/GymWare.Logic/GymWare.Logic.csproj
+++ b/GymWare-Backend/GymWare.Logic/GymWare.Logic.csproj
@@ -42,6 +42,8 @@
   <ItemGroup>
     <Compile Include="EjercicioLogic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RutinaEjercicioLogic.cs" />
+    <Compile Include="RutinaLogic.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GymWare.DataAccess\GymWare.DataAccess.csproj">
