Comida, Dieta and DietaComida CRUDs working!

--- a/GymWare-Backend/GymWare.DataAccess/GymWare.DataAccess.csproj
+++ b/GymWare-Backend/GymWare.DataAccess/GymWare.DataAccess.csproj
@@ -48,6 +48,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DAL\BaseRepository.cs" />
+    <Compile Include="DAL\ComidaRepository.cs" />
+    <Compile Include="DAL\DietaComidaRepository.cs" />
+    <Compile Include="DAL\DietaRepository.cs" />
     <Compile Include="DAL\EjercicioRepository.cs" />
     <Compile Include="DAL\GymWareContext.cs" />
     <Compile Include="DAL\RutinaEjercicioRepository.cs" />
