--- a/GymWare-Backend/GymWare.Logic/GymWare.Logic.csproj
+++ b/GymWare-Backend/GymWare.Logic/GymWare.Logic.csproj
@@ -40,10 +40,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ComidaLogic.cs" />
+    <Compile Include="DietaComidaLogic.cs" />
     <Compile Include="EjercicioLogic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RutinaEjercicioLogic.cs" />
-    <Compile Include="RutinaLogic.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GymWare.DataAccess\GymWare.DataAccess.csproj">
