--- a/GymWare-Backend/GymWare.Entities/GymWare.Entities.csproj
+++ b/GymWare-Backend/GymWare.Entities/GymWare.Entities.csproj
@@ -50,6 +50,7 @@
     <Compile Include="DietaComida.cs" />
     <Compile Include="DTO\DietaComidaDTO.cs" />
     <Compile Include="DTO\RutinaEjerciciosDTO.cs" />
+    <Compile Include="DTO\UsuarioLoginDTO.cs" />
     <Compile Include="Ejercicio.cs" />
     <Compile Include="Empleado.cs" />
     <Compile Include="EmpleadoClienteRutina.cs" />
