--- a/GymWare-Backend/GymWare.Logic/GymWare.Logic.csproj
+++ b/GymWare-Backend/GymWare.Logic/GymWare.Logic.csproj
@@ -45,6 +45,7 @@
     <Compile Include="EjercicioLogic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RutinaEjercicioLogic.cs" />
+    <Compile Include="UsuarioLogic.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GymWare.DataAccess\GymWare.DataAccess.csproj">
