--- a/GymWare-Backend/GymWare.DataAccess/GymWare.DataAccess.csproj
+++ b/GymWare-Backend/GymWare.DataAccess/GymWare.DataAccess.csproj
@@ -53,6 +53,7 @@
     <Compile Include="DAL\DietaRepository.cs" />
     <Compile Include="DAL\EjercicioRepository.cs" />
     <Compile Include="DAL\GymWareContext.cs" />
+    <Compile Include="DAL\MembresiaRepository.cs" />
     <Compile Include="DAL\RutinaEjercicioRepository.cs" />
     <Compile Include="DAL\RutinaRepository.cs" />
     <Compile Include="DAL\UsuarioRepository.cs" />
