--- a/GymWare-Backend/GymWare.API/GymWare.API.csproj
+++ b/GymWare-Backend/GymWare.API/GymWare.API.csproj
@@ -193,9 +193,9 @@
     <Compile Include="Controllers\DietasController.cs" />
     <Compile Include="Controllers\EjerciciosController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\MembresiasController.cs" />
     <Compile Include="Controllers\RutinasController.cs" />
     <Compile Include="Controllers\UsuariosController.cs" />
-    <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
