--- a/GymWare-Backend/GymWare.Entities/GymWare.Entities.csproj
+++ b/GymWare-Backend/GymWare.Entities/GymWare.Entities.csproj
@@ -49,6 +49,7 @@
     <Compile Include="DietaCliente.cs" />
     <Compile Include="DietaComida.cs" />
     <Compile Include="DTO\DietaComidaDTO.cs" />
+    <Compile Include="DTO\MembresiaCuotaDTO.cs" />
     <Compile Include="DTO\RutinaEjerciciosDTO.cs" />
     <Compile Include="DTO\UsuarioLoginDTO.cs" />
     <Compile Include="Ejercicio.cs" />
