--- a/GymWare-Backend/GymWare.Logic/GymWare.Logic.csproj
+++ b/GymWare-Backend/GymWare.Logic/GymWare.Logic.csproj
@@ -43,6 +43,7 @@
     <Compile Include="ComidaLogic.cs" />
     <Compile Include="DietaComidaLogic.cs" />
     <Compile Include="EjercicioLogic.cs" />
+    <Compile Include="MembresiaLogic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RutinaEjercicioLogic.cs" />
     <Compile Include="UsuarioLogic.cs" />
