Membresias and Asistencias backend finished and working! Whole Backend finished!

--- a/GymWare-Backend/GymWare.Logic/GymWare.Logic.csproj
+++ b/GymWare-Backend/GymWare.Logic/GymWare.Logic.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AsistenciaLogic.cs" />
     <Compile Include="ComidaLogic.cs" />
     <Compile Include="DietaComidaLogic.cs" />
     <Compile Include="EjercicioLogic.cs" />
