--- a/GymWare-Backend/GymWare.DataAccess/GymWare.DataAccess.csproj
+++ b/GymWare-Backend/GymWare.DataAccess/GymWare.DataAccess.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DAL\AsistenciaRepository.cs" />
     <Compile Include="DAL\BaseRepository.cs" />
     <Compile Include="DAL\ComidaRepository.cs" />
     <Compile Include="DAL\DietaComidaRepository.cs" />
