--- a/GymWare-Backend/GymWare.API/Web.config
+++ b/GymWare-Backend/GymWare.API/Web.config
@@ -6,6 +6,7 @@
   <connectionStrings>
     <add name="GymWareBauti" connectionString="Data Source=LAPTOP-7NUUU4J1; Initial Catalog=GymWare; Integrated Security=True; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
     <add name="GymWareAndy" connectionString="Data Source=.\SQLEXPRESS; Initial Catalog=GymWare; Integrated Security=True; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+    <add name="GymWareMauri" connectionString="Data Source=MSI; Initial Catalog=GymWare; Integrated Security=True; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
     <!--<add name="GymWareContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=GymWareContext-20180805232957; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|GymWareContext-20180805232957.mdf"
       providerName="System.Data.SqlClient" />-->
   </connectionStrings>
