--- a/GymWare-Backend/GymWare.Entities/GymWare.Entities.csproj
+++ b/GymWare-Backend/GymWare.Entities/GymWare.Entities.csproj
@@ -51,6 +51,7 @@
     <Compile Include="DTO\DietaComidaDTO.cs" />
     <Compile Include="DTO\MembresiaCuotaDTO.cs" />
     <Compile Include="DTO\RutinaEjerciciosDTO.cs" />
+    <Compile Include="DTO\UsuarioLogeadoDTO.cs" />
     <Compile Include="DTO\UsuarioLoginDTO.cs" />
     <Compile Include="Ejercicio.cs" />
     <Compile Include="Empleado.cs" />
