--- a/GymWare-Frontend/package.json
+++ b/GymWare-Frontend/package.json
@@ -24,6 +24,9 @@
     "@angular/router": "^6.0.3",
     "chart.js": "^2.7.2",
     "core-js": "^2.5.4",
+    "jquery": "^3.3.1",
+    "jspdf": "^1.4.1",
+    "jspdf-autotable": "^2.3.5",
     "ng2-charts": "^1.6.0",
     "ng6-toastr-notifications": "^1.0.4",
     "rxjs": "^6.0.0",
