--- a/GymWare-Frontend/package.json
+++ b/GymWare-Frontend/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "admin-lte": "^2.4.8",
     "chart.js": "^2.7.2",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
