Return Client asistencias on login and Delete old Rutina or Dieta when creating a new one finished.

--- a/GymWare-Backend/GymWare.Entities/GymWare.Entities.csproj
+++ b/GymWare-Backend/GymWare.Entities/GymWare.Entities.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Asistencia.cs" />
+    <Compile Include="AsistenciaCalendar.cs" />
     <Compile Include="Cliente.cs" />
     <Compile Include="Comida.cs" />
     <Compile Include="Cuota.cs" />
